# conway-rs

./: Cargo.toml  README.md
assets/: README.md
examples/: glider.conway  glider_32x32p.conway  glider_gun_40x40.conway
src/: conway.rs  engine.rs  fonts.rs  images.rs  lib.rs  main.rs
src/conway/: args.rs  board.rs  game_state.rs
src/engine/: app.rs  error.rs  frame_limiter.rs  resource_manager.rs  sdlcontext.rs  view.rs
src/engine/view/: button.rs  chain.rs  image.rs  text.rs
