[package]
name = "conway-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.sdl2]
version = "0.37"
default-features = false
features = ["static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "2024.06.15"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }