[package]
name = "conway-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.sdl2]
version = "0.37"
default-features = false
features = ["ttf", "image", "unsafe_textures", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-ttf", "sdl2-image"]
git = "https://github.com/microsoft/vcpkg"
rev = "2024.06.15"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
